Bug 53010 - Conditional formatting of type "values is between" lost when reopening the file
Summary: Conditional formatting of type "values is between" lost when reopening the file
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
3.6.0.4 release
Hardware: All All
: medium normal
Assignee: Markus Mohrhard
URL:
Whiteboard: target:3.7.0 target:3.6.1
Keywords: regression
: 54146 (view as bug list)
Depends on:
Blocks:
 
Reported: 2012-07-31 15:25 UTC by Jean-Baptiste Faure
Modified: 2012-09-11 20:01 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jean-Baptiste Faure 2012-07-31 15:25:19 UTC
Steps to reproduce:
- open a new spreadsheet
- in cell A1 add a conditional formatting : Format > Conditional Formatting > Conditional Formatting
- click Add button
- choose type "Cell value is"
- choose condition "between" and type two non zero values (for example -1 and +1)
- click OK button
- reopen conditional formatting dialog to verify that both values are there.
- close the dialog
- File > Reload
- Reopen the conditional formatting dialog ==> both values are now equal to zero.

Best regards.
JBF
Comment 1 Jean-Baptiste Faure 2012-07-31 15:33:12 UTC
worked as expected in LO 3.5.x => regression.
Confirmed on FR mailinglist.

Tested on LO 3.6.0.4, LO 3.6.1.0+ (Build ID: 71e6a74) and master (Version 3.7.0.0.alpha0+ (Build ID: 334989a))

Best regards. JBF
Comment 2 Jean-Baptiste Faure 2012-07-31 15:34:46 UTC
Hi Markus, this one is probably for you :-)

Best regards. JBF
Comment 3 Markus Mohrhard 2012-08-05 09:29:51 UTC
Export looks ok. Import is the problem.
Comment 4 Markus Mohrhard 2012-08-05 09:46:32 UTC
Fixed it. Was a by one error when counting the string length.
Comment 5 Not Assigned 2012-08-05 10:05:48 UTC
Markus Mohrhard committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=507305afa0d826b7e3cb3cc9a4b389f0ba854638

use correct string length for "between", fdo#53010
Comment 6 Not Assigned 2012-08-05 10:46:11 UTC
Markus Mohrhard committed a patch related to this issue.
It has been pushed to "libreoffice-3-6":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=38d7b11915c9c4e5fcebcb7eb3ae1b2846b26267&g=libreoffice-3-6

use correct string length for "between", fdo#53010


It will be available in LibreOffice 3.6.1.
Comment 7 Jean-Baptiste Faure 2012-08-26 10:44:51 UTC
*** Bug 54008 has been marked as a duplicate of this bug. ***
Comment 8 Jean-Baptiste Faure 2012-08-31 05:42:56 UTC
*** Bug 54146 has been marked as a duplicate of this bug. ***