use correct string length for "between", fdo#53010

Change-Id: I282c6a4436984d268b107ffef01022831c05a0fa